-- Удаление таблиц в обратном порядке зависимостей.

DROP TABLE "message";
DROP TABLE "match";
DROP TABLE "profile_like";
DROP TABLE "photo_comment";
DROP TABLE "photo";
DROP TABLE "report";
DROP TABLE "report_type";
DROP TABLE "profile_tag";
DROP TABLE "tag";
DROP TABLE "subscription";
DROP TABLE "plan";
DROP TABLE "user_answer";
DROP TABLE "profile_psycho";
DROP TABLE "question";
DROP TABLE "test";
DROP TABLE "profile_version";
DROP TABLE "profile";
DROP TABLE "user";
